<resources>
    <string name="app_name">UI</string>
    <string name="first">First</string>
    <string name="title">对话框</string>
    <string name="message">这是内容</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="demo1">Demo1</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="demo2">demo2</string>
    <string name="adapter_one">Adapter_One</string>
    <string name="adapter_two">adapter_two</string>
    <string name="demo3">Selector</string>
    <string name="demo4">Search</string>
    <string name="search_text">输入查询关键字</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">清除搜索历史</string>
    <string name="demo5">Draw</string>
    <string-array name="items">
        <item>first</item>
        <item>second</item>
        <item>third</item>
    </string-array>
</resources>
